updated with latest changes.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Document</title>
   </head>
   <body>
+    <script type="module" src="./App.js"></script>
     <div id="root">
-      <script type="module" src="./App.js"></script>
+      <h1>Didn't render</h1>
     </div>
-    <div id="parent"></div>
   </body>
 </html>
