--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script type="module" src="./App.js"></script>
     <div id="root">
       <h1>Didn't render</h1>
+      <h1>hello</h1>
     </div>
   </body>
 </html>
