routing has been implemented

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <script type="module" src="./App.js"></script>
+    <script type="module" src="./src/App.js"></script>
     <div id="root">
       <h1>Didn't render</h1>
       <h2>hello</h2>
