added restaurant menu

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       href="https://gistcdn.githack.com/mfd/09b70eb47474836f25a21660282ce0fd/raw/e06a670afcb2b861ed2ac4a1ef752d062ef6b46b/Gilroy.css"
     />
     <link rel="stylesheet" href="./fonts.css" />
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./src/index.css" />
     <title>Document</title>
   </head>
-  <body>
+  <body class="m-0 p-0 box-border">
     <script type="module" src="./src/App.js"></script>
     <div id="root">
       <h1>Didn't render</h1>
